styles.css
/* ... */
/**
   * Restore the focus styles unset by the previous rule.
   */

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

/**
   * Correct the padding in Firefox.
   */

fieldset {
  padding: 0.35em 0.75em 0.625em;
}

/**
   * 1. Correct the text wrapping in Edge and IE.
   * 2. Correct the color inheritance from `fieldset` elements in IE.
   * 3. Remove the padding so developers are not caught out when they zero out
   *    `fieldset` elements in all browsers.
   */

legend {
  box-sizing: border-box;
  /* 1 */
  color: inherit;
  /* 2 */
  display: table;
  /* 1 */
  max-width: 100%;
  /* 1 */
  padding: 0;
  /* 3 */
  white-space: normal;
  /* 1 */
}

/**
   * Add the correct vertical alignment in Chrome, Firefox, and Opera.
   */

progress {
  vertical-align: baseline;
}

/**
   * Remove the default vertical scrollbar in IE 10+.
   */

textarea {
  overflow: auto;
}

/**
   * 1. Add the correct box sizing in IE 10.
   * 2. Remove the padding in IE 10.
   */

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
  /* 1 */
  padding: 0;
  /* 2 */
}

/**
   * Correct the cursor style of increment and decrement buttons in Chrome.
  */

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/**
   * 1. Correct the odd appearance in Chrome and Safari.
   * 2. Correct the outline style in Safari.
   */

[type="search"] {
  -webkit-appearance: textfield;
  /* 1 */
  outline-offset: -2px;
  /* 2 */
}

/**
   * Remove the inner padding in Chrome and Safari on macOS.
   */

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
   * 1. Correct the inability to style clickable types in iOS and Safari.
   * 2. Change font properties to `inherit` in Safari.
   */

::-webkit-file-upload-button {
  -webkit-appearance: button;
  /* 1 */
  font: inherit;
  /* 2 */
}

/* Interactive
     ========================================================================== */

/*
   * Add the correct display in Edge, IE 10+, and Firefox.
   */

details {
  display: block;
}

/*
   * Add the correct display in all browsers.
   */

summary {
  display: list-item;
}

/* Misc
     ========================================================================== */

/**
   * Add the correct display in IE 10+.
   */

template {
  display: none;
}

/**
   * Add the correct display in IE 10.
   */

[hidden] {
  display: none;
}


/* Diana's document normalization */
ol,
ul,
li {
  list-style: none;
  margin: 0;
  padding: 0;
}

/* Global settings */

h1,
h2,
h3,
h4,
p, li {
  font-family: Arial, Helvetica, sans-serif;
  width: 100%;
  word-wrap: break-word;
  color: #ffffff;
}

a {
  text-decoration: none;
  color: #ffffff;
  display: inline-block;
}

li {
  color: #000000;
  list-style-type: disc;
  line-height: 1.6em;
  list-style-position: inside;
}

a:hover {
  text-decoration: none;
}

p {
  line-height: 2;
  font-size: 16px;
  margin-bottom: 15px;
}



button {
  background: none;
  border: 0;
  text-decoration: none;
  color: #ffffff;
}

.content-wrapper {
  margin: 0 5%;
}

.margin-bottom {
  margin-bottom: 12%;
}

.margin-bottom-internal{
  margin-bottom: 15px;
}

#global_nav span.menu-number {
  color: #4a00e0;
  font-weight: bold;
}

.general_background {
  background-color: #020b17;
}

.secondary_background {
  background-color: #4a00e0;
}

.black {
  color: #000000; 
}

footer {
  background: #000000;
  text-align: center;
}

/* button:hover a {
  color: #4a00e0;
  background: #4ABCC7;
} */




/* Homepage Styling */
/* ==========================================================================*/
/* ==========================================================================*/


/* Homepage Navigation */

#portfolio_homepage h1,
#portfolio_homepage h2 {
  font-weight: bold;
}



.navbar_button {
  /* display: flex;
  flex-wrap: wrap;
  justify-content: space-between; */
  align-items: center;
  padding: 20px 5%;
  background: #ffffff;
}

.flexFix {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.navbar_collapse {
  flex-basis: 100%;
  flex-grow: 1;
  background:#ffffff;
  width: 100%;
}
.navbar_collapse li {
  margin: 50px 0;
}

.navbar_collapse a {
  display: block;
  text-align: center;
  font-size: 20px;
  letter-spacing: 0.5px;
}
#inner_global_nav {
  margin-top: 30%;
}


/* Animation initial state */
.animated-icon {
  width: 30px;
  height: 20px;
  position: relative;
  margin: 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .5s ease-in-out;
  -moz-transition: .5s ease-in-out;
  -o-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
  cursor: pointer;
}

.animated-icon span {
  display: block;
  position: absolute;
  height: 3px;
  width: 100%;
  border-radius: 9px;
  opacity: 1;
  left: 0;
  background-color:#040b17;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .25s ease-in-out;
  -moz-transition: .25s ease-in-out;
  -o-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
}

.animated-icon span:nth-child(1) {
  top: 0px;
}

.animated-icon span:nth-child(2) {
  top: 10.5px;
}

.animated-icon span:nth-child(3) {
  top: 20px;
}

/* Navigation when toggle */
.animated-icon.open span:nth-child(1) {
  top: 11px;
  width: 0%;
  left: 50%;
}

.animated-icon.open span:nth-child(2) {
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
}

.animated-icon.open span:nth-child(3) {
  top: 11px;
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.animated-icon.open span:nth-child(4) {
  top: 11px;
  width: 0%;
  left: 50%;
}
/* ... */

